Upgrade to gatling-3.14.3; Fix base image, runner scripts